feat: move color and typography classes in utilities layer

--- a/lib/src/style/base/index.sass
+++ b/lib/src/style/base/index.sass
@@ -13,9 +13,9 @@
   :after
     box-sizing: border-box
 
-@layer defaults, general, components, themes
+@layer defaults, general, components, utilities, themes
 
-@layer defaults
+@layer utilities
   @import "_colors"
   @import "_typography"
 
