fix: replace sass @import with @use

--- a/dev/src/assets/styles/smartvui.sass
+++ b/dev/src/assets/styles/smartvui.sass
@@ -1,10 +1,10 @@
-@import "$lib/style/base/index.sass"
+@use "$lib/style/base/index.sass" as smartvui-base
 
-// @import "$lib/style/tokens/colors.sass"
-@import "$lib/style/tokens/elevations.sass"
-@import "$lib/style/tokens/motion.sass"
-@import "$lib/style/tokens/shapes.sass"
-@import "$lib/style/tokens/state.sass"
-@import "$lib/style/tokens/typography.sass"
+// @use "$lib/style/tokens/colors.sass" as smartvui-tokens-colors
+@use "$lib/style/tokens/elevations.sass" as smartvui-tokens-elevation
+@use "$lib/style/tokens/motion.sass" as smartvui-tokens-motion
+@use "$lib/style/tokens/shapes.sass" as smartvui-tokens-shapes
+@use "$lib/style/tokens/state.sass" as smartvui-tokens-state
+@use "$lib/style/tokens/typography.sass" as smartvui-tokens-typography
 
-@import "$lib/style/color-themes/index.sass"
+@use "$lib/style/color-themes/index.sass" as smartvui-color-themes
