--- a/lib/src/style/base/_colors.sass
+++ b/lib/src/style/base/_colors.sass
@@ -1,134 +1,135 @@
-.sv-bg
-  &--transparent
-    background-color: transparent
+@mixin colors
+  .sv-bg
+    &--transparent
+      background-color: transparent
 
-  &--primary
-    background-color: var(--sv-sys-color-primary)
+    &--primary
+      background-color: var(--sv-sys-color-primary)
 
-  &--primary-container
-    background-color: var(--sv-sys-color-primary-container)
+    &--primary-container
+      background-color: var(--sv-sys-color-primary-container)
 
-  &--primary-fixed
-    background-color: var(--sv-sys-color-primary-fixed)
+    &--primary-fixed
+      background-color: var(--sv-sys-color-primary-fixed)
 
-  &--primary-fixed-dim
-    background-color: var(--sv-sys-color-primary-fixed-dim)
+    &--primary-fixed-dim
+      background-color: var(--sv-sys-color-primary-fixed-dim)
 
-  &--secondary
-    background-color: var(--sv-sys-color-secondary)
+    &--secondary
+      background-color: var(--sv-sys-color-secondary)
 
-  &--secondary-container
-    background-color: var(--sv-sys-color-secondary-container)
+    &--secondary-container
+      background-color: var(--sv-sys-color-secondary-container)
 
-  &--secondary-fixed
-    background-color: var(--sv-sys-color-secondary-fixed)
+    &--secondary-fixed
+      background-color: var(--sv-sys-color-secondary-fixed)
 
-  &--secondary-fixed-dim
-    background-color: var(--sv-sys-color-secondary-fixed-dim)
+    &--secondary-fixed-dim
+      background-color: var(--sv-sys-color-secondary-fixed-dim)
 
-  &--tertiary
-    background-color: var(--sv-sys-color-tertiary)
+    &--tertiary
+      background-color: var(--sv-sys-color-tertiary)
 
-  &--tertiary-container
-    background-color: var(--sv-sys-color-tertiary-container)
+    &--tertiary-container
+      background-color: var(--sv-sys-color-tertiary-container)
 
-  &--tertiary-fixed
-    background-color: var(--sv-sys-color-tertiary-fixed)
+    &--tertiary-fixed
+      background-color: var(--sv-sys-color-tertiary-fixed)
 
-  &--tertiary-fixed-dim
-    background-color: var(--sv-sys-color-tertiary-fixed-dim)
+    &--tertiary-fixed-dim
+      background-color: var(--sv-sys-color-tertiary-fixed-dim)
 
-  &--error
-    background-color: var(--sv-sys-color-error)
+    &--error
+      background-color: var(--sv-sys-color-error)
 
-  &--error-container
-    background-color: var(--sv-sys-color-error-container)
+    &--error-container
+      background-color: var(--sv-sys-color-error-container)
 
-  &--inverse-surface
-    background-color: var(--sv-sys-color-inverse-surface)
+    &--inverse-surface
+      background-color: var(--sv-sys-color-inverse-surface)
 
-  &--background
-    background-color: var(--sv-sys-color-background)
+    &--background
+      background-color: var(--sv-sys-color-background)
 
-  &--surface-dim
-    background-color: var(--sv-sys-color-surface-dim)
+    &--surface-dim
+      background-color: var(--sv-sys-color-surface-dim)
 
-  &--surface
-    background-color: var(--sv-sys-color-surface)
+    &--surface
+      background-color: var(--sv-sys-color-surface)
 
-  &--surface-bright
-    background-color: var(--sv-sys-color-surface-bright)
+    &--surface-bright
+      background-color: var(--sv-sys-color-surface-bright)
 
-  &--surface-container-lowest
-    background-color: var(--sv-sys-color-surface-container-lowest)
+    &--surface-container-lowest
+      background-color: var(--sv-sys-color-surface-container-lowest)
 
-  &--surface-container-low
-    background-color: var(--sv-sys-color-surface-container-low)
+    &--surface-container-low
+      background-color: var(--sv-sys-color-surface-container-low)
 
-  &--surface-container
-    background-color: var(--sv-sys-color-surface-container)
+    &--surface-container
+      background-color: var(--sv-sys-color-surface-container)
 
-  &--surface-container-high
-    background-color: var(--sv-sys-color-surface-container-high)
+    &--surface-container-high
+      background-color: var(--sv-sys-color-surface-container-high)
 
-  &--surface-container-highest
-    background-color: var(--sv-sys-color-surface-container-highest)
+    &--surface-container-highest
+      background-color: var(--sv-sys-color-surface-container-highest)
 
-.sv-c
-  &--on-primary
-    color: var(--sv-sys-color-on-primary)
+  .sv-c
+    &--on-primary
+      color: var(--sv-sys-color-on-primary)
 
-  &--on-primary-container
-    color: var(--sv-sys-color-on-primary-container)
+    &--on-primary-container
+      color: var(--sv-sys-color-on-primary-container)
 
-  &--on-primary-fixed
-    color: var(--sv-sys-color-on-primary-fixed)
+    &--on-primary-fixed
+      color: var(--sv-sys-color-on-primary-fixed)
 
-  &--on-primary-fixed-variant
-    color: var(--sv-sys-color-on-primary-fixed-variant)
+    &--on-primary-fixed-variant
+      color: var(--sv-sys-color-on-primary-fixed-variant)
 
-  &--on-secondary
-    color: var(--sv-sys-color-on-secondary)
+    &--on-secondary
+      color: var(--sv-sys-color-on-secondary)
 
-  &--on-secondary-container
-    color: var(--sv-sys-color-on-secondary-container)
+    &--on-secondary-container
+      color: var(--sv-sys-color-on-secondary-container)
 
-  &--on-secondary-fixed
-    color: var(--sv-sys-color-on-secondary-fixed)
+    &--on-secondary-fixed
+      color: var(--sv-sys-color-on-secondary-fixed)
 
-  &--on-secondary-fixed-variant
-    color: var(--sv-sys-color-on-secondary-fixed-variant)
+    &--on-secondary-fixed-variant
+      color: var(--sv-sys-color-on-secondary-fixed-variant)
 
-  &--on-tertiary
-    color: var(--sv-sys-color-on-tertiary)
+    &--on-tertiary
+      color: var(--sv-sys-color-on-tertiary)
 
-  &--on-tertiary-container
-    color: var(--sv-sys-color-on-tertiary-container)
+    &--on-tertiary-container
+      color: var(--sv-sys-color-on-tertiary-container)
 
-  &--on-tertiary-fixed
-    color: var(--sv-sys-color-on-tertiary-fixed)
+    &--on-tertiary-fixed
+      color: var(--sv-sys-color-on-tertiary-fixed)
 
-  &--on-tertiary-fixed-variant
-    color: var(--sv-sys-color-on-tertiary-fixed-variant)
+    &--on-tertiary-fixed-variant
+      color: var(--sv-sys-color-on-tertiary-fixed-variant)
 
-  &--on-error
-    color: var(--sv-sys-color-on-error)
+    &--on-error
+      color: var(--sv-sys-color-on-error)
 
-  &--on-error-container
-    color: var(--sv-sys-color-on-error-container)
+    &--on-error-container
+      color: var(--sv-sys-color-on-error-container)
 
-  &--inverse-on-surface
-    color: var(--sv-sys-color-inverse-on-surface)
+    &--inverse-on-surface
+      color: var(--sv-sys-color-inverse-on-surface)
 
-  &--inverse-primary
-    color: var(--sv-sys-color-inverse-primary)
+    &--inverse-primary
+      color: var(--sv-sys-color-inverse-primary)
 
-  &--on-background
-    color: var(--sv-sys-color-on-background)
+    &--on-background
+      color: var(--sv-sys-color-on-background)
 
-  &--on-surface
-    color: var(--sv-sys-color-on-surface)
+    &--on-surface
+      color: var(--sv-sys-color-on-surface)
 
-  &--on-surface-variant
-    color: var(--sv-sys-color-on-surface-variant)
+    &--on-surface-variant
+      color: var(--sv-sys-color-on-surface-variant)
 
