--- a/lib/src/style/base/_typography.sass
+++ b/lib/src/style/base/_typography.sass
@@ -1,149 +1,150 @@
-.sv-t--display-large
-  font-family: var(--sv-sys-typescale-display-large-font-family-name)
-  font-style: var(--sv-sys-typescale-display-large-font-family-style)
-  font-weight: var(--sv-sys-typescale-display-large-font-weight)
-  font-size: var(--sv-sys-typescale-display-large-font-size)
-  line-height: var(--sv-sys-typescale-display-large-line-height)
-  letter-spacing: var(--sv-sys-typescale-display-large-letter-spacing)
-  text-transform: var(--sv-sys-typescale-display-large-text-transform)
-  text-decoration: var(--sv-sys-typescale-display-large-text-decoration)
+@mixin typography
+  .sv-t--display-large
+    font-family: var(--sv-sys-typescale-display-large-font-family-name)
+    font-style: var(--sv-sys-typescale-display-large-font-family-style)
+    font-weight: var(--sv-sys-typescale-display-large-font-weight)
+    font-size: var(--sv-sys-typescale-display-large-font-size)
+    line-height: var(--sv-sys-typescale-display-large-line-height)
+    letter-spacing: var(--sv-sys-typescale-display-large-letter-spacing)
+    text-transform: var(--sv-sys-typescale-display-large-text-transform)
+    text-decoration: var(--sv-sys-typescale-display-large-text-decoration)
 
-.sv-t--display-medium
-  font-family: var(--sv-sys-typescale-display-medium-font-family-name)
-  font-style: var(--sv-sys-typescale-display-medium-font-family-style)
-  font-weight: var(--sv-sys-typescale-display-medium-font-weight)
-  font-size: var(--sv-sys-typescale-display-medium-font-size)
-  line-height: var(--sv-sys-typescale-display-medium-line-height)
-  letter-spacing: var(--sv-sys-typescale-display-medium-letter-spacing)
-  text-transform: var(--sv-sys-typescale-display-medium-text-transform)
-  text-decoration: var(--sv-sys-typescale-display-medium-text-decoration)
+  .sv-t--display-medium
+    font-family: var(--sv-sys-typescale-display-medium-font-family-name)
+    font-style: var(--sv-sys-typescale-display-medium-font-family-style)
+    font-weight: var(--sv-sys-typescale-display-medium-font-weight)
+    font-size: var(--sv-sys-typescale-display-medium-font-size)
+    line-height: var(--sv-sys-typescale-display-medium-line-height)
+    letter-spacing: var(--sv-sys-typescale-display-medium-letter-spacing)
+    text-transform: var(--sv-sys-typescale-display-medium-text-transform)
+    text-decoration: var(--sv-sys-typescale-display-medium-text-decoration)
 
-.sv-t--display-small
-  font-family: var(--sv-sys-typescale-display-small-font-family-name)
-  font-style: var(--sv-sys-typescale-display-small-font-family-style)
-  font-weight: var(--sv-sys-typescale-display-small-font-weight)
-  font-size: var(--sv-sys-typescale-display-small-font-size)
-  line-height: var(--sv-sys-typescale-display-small-line-height)
-  letter-spacing: var(--sv-sys-typescale-display-small-letter-spacing)
-  text-transform: var(--sv-sys-typescale-display-small-text-transform)
-  text-decoration: var(--sv-sys-typescale-display-small-text-decoration)
+  .sv-t--display-small
+    font-family: var(--sv-sys-typescale-display-small-font-family-name)
+    font-style: var(--sv-sys-typescale-display-small-font-family-style)
+    font-weight: var(--sv-sys-typescale-display-small-font-weight)
+    font-size: var(--sv-sys-typescale-display-small-font-size)
+    line-height: var(--sv-sys-typescale-display-small-line-height)
+    letter-spacing: var(--sv-sys-typescale-display-small-letter-spacing)
+    text-transform: var(--sv-sys-typescale-display-small-text-transform)
+    text-decoration: var(--sv-sys-typescale-display-small-text-decoration)
 
-.sv-t--headline-large
-  font-family: var(--sv-sys-typescale-headline-large-font-family-name)
-  font-style: var(--sv-sys-typescale-headline-large-font-family-style)
-  font-weight: var(--sv-sys-typescale-headline-large-font-weight)
-  font-size: var(--sv-sys-typescale-headline-large-font-size)
-  line-height: var(--sv-sys-typescale-headline-large-line-height)
-  letter-spacing: var(--sv-sys-typescale-headline-large-letter-spacing)
-  text-transform: var(--sv-sys-typescale-headline-large-text-transform)
-  text-decoration: var(--sv-sys-typescale-headline-large-text-decoration)
+  .sv-t--headline-large
+    font-family: var(--sv-sys-typescale-headline-large-font-family-name)
+    font-style: var(--sv-sys-typescale-headline-large-font-family-style)
+    font-weight: var(--sv-sys-typescale-headline-large-font-weight)
+    font-size: var(--sv-sys-typescale-headline-large-font-size)
+    line-height: var(--sv-sys-typescale-headline-large-line-height)
+    letter-spacing: var(--sv-sys-typescale-headline-large-letter-spacing)
+    text-transform: var(--sv-sys-typescale-headline-large-text-transform)
+    text-decoration: var(--sv-sys-typescale-headline-large-text-decoration)
 
-.sv-t--headline-medium
-  font-family: var(--sv-sys-typescale-headline-medium-font-family-name)
-  font-style: var(--sv-sys-typescale-headline-medium-font-family-style)
-  font-weight: var(--sv-sys-typescale-headline-medium-font-weight)
-  font-size: var(--sv-sys-typescale-headline-medium-font-size)
-  line-height: var(--sv-sys-typescale-headline-medium-line-height)
-  letter-spacing: var(--sv-sys-typescale-headline-medium-letter-spacing)
-  text-transform: var(--sv-sys-typescale-headline-medium-text-transform)
-  text-decoration: var(--sv-sys-typescale-headline-medium-text-decoration)
+  .sv-t--headline-medium
+    font-family: var(--sv-sys-typescale-headline-medium-font-family-name)
+    font-style: var(--sv-sys-typescale-headline-medium-font-family-style)
+    font-weight: var(--sv-sys-typescale-headline-medium-font-weight)
+    font-size: var(--sv-sys-typescale-headline-medium-font-size)
+    line-height: var(--sv-sys-typescale-headline-medium-line-height)
+    letter-spacing: var(--sv-sys-typescale-headline-medium-letter-spacing)
+    text-transform: var(--sv-sys-typescale-headline-medium-text-transform)
+    text-decoration: var(--sv-sys-typescale-headline-medium-text-decoration)
 
-.sv-t--headline-small
-  font-family: var(--sv-sys-typescale-headline-small-font-family-name)
-  font-style: var(--sv-sys-typescale-headline-small-font-family-style)
-  font-weight: var(--sv-sys-typescale-headline-small-font-weight)
-  font-size: var(--sv-sys-typescale-headline-small-font-size)
-  line-height: var(--sv-sys-typescale-headline-small-line-height)
-  letter-spacing: var(--sv-sys-typescale-headline-small-letter-spacing)
-  text-transform: var(--sv-sys-typescale-headline-small-text-transform)
-  text-decoration: var(--sv-sys-typescale-headline-small-text-decoration)
+  .sv-t--headline-small
+    font-family: var(--sv-sys-typescale-headline-small-font-family-name)
+    font-style: var(--sv-sys-typescale-headline-small-font-family-style)
+    font-weight: var(--sv-sys-typescale-headline-small-font-weight)
+    font-size: var(--sv-sys-typescale-headline-small-font-size)
+    line-height: var(--sv-sys-typescale-headline-small-line-height)
+    letter-spacing: var(--sv-sys-typescale-headline-small-letter-spacing)
+    text-transform: var(--sv-sys-typescale-headline-small-text-transform)
+    text-decoration: var(--sv-sys-typescale-headline-small-text-decoration)
 
-.sv-t--body-large
-  font-family: var(--sv-sys-typescale-body-large-font-family-name)
-  font-style: var(--sv-sys-typescale-body-large-font-family-style)
-  font-weight: var(--sv-sys-typescale-body-large-font-weight)
-  font-size: var(--sv-sys-typescale-body-large-font-size)
-  line-height: var(--sv-sys-typescale-body-large-line-height)
-  letter-spacing: var(--sv-sys-typescale-body-large-letter-spacing)
-  text-transform: var(--sv-sys-typescale-body-large-text-transform)
-  text-decoration: var(--sv-sys-typescale-body-large-text-decoration)
+  .sv-t--body-large
+    font-family: var(--sv-sys-typescale-body-large-font-family-name)
+    font-style: var(--sv-sys-typescale-body-large-font-family-style)
+    font-weight: var(--sv-sys-typescale-body-large-font-weight)
+    font-size: var(--sv-sys-typescale-body-large-font-size)
+    line-height: var(--sv-sys-typescale-body-large-line-height)
+    letter-spacing: var(--sv-sys-typescale-body-large-letter-spacing)
+    text-transform: var(--sv-sys-typescale-body-large-text-transform)
+    text-decoration: var(--sv-sys-typescale-body-large-text-decoration)
 
-.sv-t--body-medium
-  font-family: var(--sv-sys-typescale-body-medium-font-family-name)
-  font-style: var(--sv-sys-typescale-body-medium-font-family-style)
-  font-weight: var(--sv-sys-typescale-body-medium-font-weight)
-  font-size: var(--sv-sys-typescale-body-medium-font-size)
-  line-height: var(--sv-sys-typescale-body-medium-line-height)
-  letter-spacing: var(--sv-sys-typescale-body-medium-letter-spacing)
-  text-transform: var(--sv-sys-typescale-body-medium-text-transform)
-  text-decoration: var(--sv-sys-typescale-body-medium-text-decoration)
+  .sv-t--body-medium
+    font-family: var(--sv-sys-typescale-body-medium-font-family-name)
+    font-style: var(--sv-sys-typescale-body-medium-font-family-style)
+    font-weight: var(--sv-sys-typescale-body-medium-font-weight)
+    font-size: var(--sv-sys-typescale-body-medium-font-size)
+    line-height: var(--sv-sys-typescale-body-medium-line-height)
+    letter-spacing: var(--sv-sys-typescale-body-medium-letter-spacing)
+    text-transform: var(--sv-sys-typescale-body-medium-text-transform)
+    text-decoration: var(--sv-sys-typescale-body-medium-text-decoration)
 
-.sv-t--body-small
-  font-family: var(--sv-sys-typescale-body-small-font-family-name)
-  font-style: var(--sv-sys-typescale-body-small-font-family-style)
-  font-weight: var(--sv-sys-typescale-body-small-font-weight)
-  font-size: var(--sv-sys-typescale-body-small-font-size)
-  line-height: var(--sv-sys-typescale-body-small-line-height)
-  letter-spacing: var(--sv-sys-typescale-body-small-letter-spacing)
-  text-transform: var(--sv-sys-typescale-body-small-text-transform)
-  text-decoration: var(--sv-sys-typescale-body-small-text-decoration)
+  .sv-t--body-small
+    font-family: var(--sv-sys-typescale-body-small-font-family-name)
+    font-style: var(--sv-sys-typescale-body-small-font-family-style)
+    font-weight: var(--sv-sys-typescale-body-small-font-weight)
+    font-size: var(--sv-sys-typescale-body-small-font-size)
+    line-height: var(--sv-sys-typescale-body-small-line-height)
+    letter-spacing: var(--sv-sys-typescale-body-small-letter-spacing)
+    text-transform: var(--sv-sys-typescale-body-small-text-transform)
+    text-decoration: var(--sv-sys-typescale-body-small-text-decoration)
 
-.sv-t--label-large
-  font-family: var(--sv-sys-typescale-label-large-font-family-name)
-  font-style: var(--sv-sys-typescale-label-large-font-family-style)
-  font-weight: var(--sv-sys-typescale-label-large-font-weight)
-  font-size: var(--sv-sys-typescale-label-large-font-size)
-  line-height: var(--sv-sys-typescale-label-large-line-height)
-  letter-spacing: var(--sv-sys-typescale-label-large-letter-spacing)
-  text-transform: var(--sv-sys-typescale-label-large-text-transform)
-  text-decoration: var(--sv-sys-typescale-label-large-text-decoration)
+  .sv-t--label-large
+    font-family: var(--sv-sys-typescale-label-large-font-family-name)
+    font-style: var(--sv-sys-typescale-label-large-font-family-style)
+    font-weight: var(--sv-sys-typescale-label-large-font-weight)
+    font-size: var(--sv-sys-typescale-label-large-font-size)
+    line-height: var(--sv-sys-typescale-label-large-line-height)
+    letter-spacing: var(--sv-sys-typescale-label-large-letter-spacing)
+    text-transform: var(--sv-sys-typescale-label-large-text-transform)
+    text-decoration: var(--sv-sys-typescale-label-large-text-decoration)
 
-.sv-t--label-medium
-  font-family: var(--sv-sys-typescale-label-medium-font-family-name)
-  font-style: var(--sv-sys-typescale-label-medium-font-family-style)
-  font-weight: var(--sv-sys-typescale-label-medium-font-weight)
-  font-size: var(--sv-sys-typescale-label-medium-font-size)
-  line-height: var(--sv-sys-typescale-label-medium-line-height)
-  letter-spacing: var(--sv-sys-typescale-label-medium-letter-spacing)
-  text-transform: var(--sv-sys-typescale-label-medium-text-transform)
-  text-decoration: var(--sv-sys-typescale-label-medium-text-decoration)
+  .sv-t--label-medium
+    font-family: var(--sv-sys-typescale-label-medium-font-family-name)
+    font-style: var(--sv-sys-typescale-label-medium-font-family-style)
+    font-weight: var(--sv-sys-typescale-label-medium-font-weight)
+    font-size: var(--sv-sys-typescale-label-medium-font-size)
+    line-height: var(--sv-sys-typescale-label-medium-line-height)
+    letter-spacing: var(--sv-sys-typescale-label-medium-letter-spacing)
+    text-transform: var(--sv-sys-typescale-label-medium-text-transform)
+    text-decoration: var(--sv-sys-typescale-label-medium-text-decoration)
 
-.sv-t--label-small
-  font-family: var(--sv-sys-typescale-label-small-font-family-name)
-  font-style: var(--sv-sys-typescale-label-small-font-family-style)
-  font-weight: var(--sv-sys-typescale-label-small-font-weight)
-  font-size: var(--sv-sys-typescale-label-small-font-size)
-  line-height: var(--sv-sys-typescale-label-small-line-height)
-  letter-spacing: var(--sv-sys-typescale-label-small-letter-spacing)
-  text-transform: var(--sv-sys-typescale-label-small-text-transform)
-  text-decoration: var(--sv-sys-typescale-label-small-text-decoration)
+  .sv-t--label-small
+    font-family: var(--sv-sys-typescale-label-small-font-family-name)
+    font-style: var(--sv-sys-typescale-label-small-font-family-style)
+    font-weight: var(--sv-sys-typescale-label-small-font-weight)
+    font-size: var(--sv-sys-typescale-label-small-font-size)
+    line-height: var(--sv-sys-typescale-label-small-line-height)
+    letter-spacing: var(--sv-sys-typescale-label-small-letter-spacing)
+    text-transform: var(--sv-sys-typescale-label-small-text-transform)
+    text-decoration: var(--sv-sys-typescale-label-small-text-decoration)
 
-.sv-t--title-large
-  font-family: var(--sv-sys-typescale-title-large-font-family-name)
-  font-style: var(--sv-sys-typescale-title-large-font-family-style)
-  font-weight: var(--sv-sys-typescale-title-large-font-weight)
-  font-size: var(--sv-sys-typescale-title-large-font-size)
-  line-height: var(--sv-sys-typescale-title-large-line-height)
-  letter-spacing: var(--sv-sys-typescale-title-large-letter-spacing)
-  text-transform: var(--sv-sys-typescale-title-large-text-transform)
-  text-decoration: var(--sv-sys-typescale-title-large-text-decoration)
+  .sv-t--title-large
+    font-family: var(--sv-sys-typescale-title-large-font-family-name)
+    font-style: var(--sv-sys-typescale-title-large-font-family-style)
+    font-weight: var(--sv-sys-typescale-title-large-font-weight)
+    font-size: var(--sv-sys-typescale-title-large-font-size)
+    line-height: var(--sv-sys-typescale-title-large-line-height)
+    letter-spacing: var(--sv-sys-typescale-title-large-letter-spacing)
+    text-transform: var(--sv-sys-typescale-title-large-text-transform)
+    text-decoration: var(--sv-sys-typescale-title-large-text-decoration)
 
-.sv-t--title-medium
-  font-family: var(--sv-sys-typescale-title-medium-font-family-name)
-  font-style: var(--sv-sys-typescale-title-medium-font-family-style)
-  font-weight: var(--sv-sys-typescale-title-medium-font-weight)
-  font-size: var(--sv-sys-typescale-title-medium-font-size)
-  line-height: var(--sv-sys-typescale-title-medium-line-height)
-  letter-spacing: var(--sv-sys-typescale-title-medium-letter-spacing)
-  text-transform: var(--sv-sys-typescale-title-medium-text-transform)
-  text-decoration: var(--sv-sys-typescale-title-medium-text-decoration)
+  .sv-t--title-medium
+    font-family: var(--sv-sys-typescale-title-medium-font-family-name)
+    font-style: var(--sv-sys-typescale-title-medium-font-family-style)
+    font-weight: var(--sv-sys-typescale-title-medium-font-weight)
+    font-size: var(--sv-sys-typescale-title-medium-font-size)
+    line-height: var(--sv-sys-typescale-title-medium-line-height)
+    letter-spacing: var(--sv-sys-typescale-title-medium-letter-spacing)
+    text-transform: var(--sv-sys-typescale-title-medium-text-transform)
+    text-decoration: var(--sv-sys-typescale-title-medium-text-decoration)
 
-.sv-t--title-small
-  font-family: var(--sv-sys-typescale-title-small-font-family-name)
-  font-style: var(--sv-sys-typescale-title-small-font-family-style)
-  font-weight: var(--sv-sys-typescale-title-small-font-weight)
-  font-size: var(--sv-sys-typescale-title-small-font-size)
-  line-height: var(--sv-sys-typescale-title-small-line-height)
-  letter-spacing: var(--sv-sys-typescale-title-small-letter-spacing)
-  text-transform: var(--sv-sys-typescale-title-small-text-transform)
-  text-decoration: var(--sv-sys-typescale-title-small-text-decoration)
+  .sv-t--title-small
+    font-family: var(--sv-sys-typescale-title-small-font-family-name)
+    font-style: var(--sv-sys-typescale-title-small-font-family-style)
+    font-weight: var(--sv-sys-typescale-title-small-font-weight)
+    font-size: var(--sv-sys-typescale-title-small-font-size)
+    line-height: var(--sv-sys-typescale-title-small-line-height)
+    letter-spacing: var(--sv-sys-typescale-title-small-letter-spacing)
+    text-transform: var(--sv-sys-typescale-title-small-text-transform)
+    text-decoration: var(--sv-sys-typescale-title-small-text-decoration)
